# rime_dict_maker

./: .gitignore  README.md  pyproject.toml  rime_dict_maker.py  vcard2rimedict.py
